--- a/_posts/2024-08-02-Test.md
+++ b/_posts/2024-08-02-Test.md
@@ -4,6 +4,7 @@ date: 2024-08-02 +0800
 categories: [test, test]
 tags: [test]     # TAG names should always be lowercase
 description: test
+author: piotr
 ---
 
 # This is a test
