--- a/_posts/2024-08-09.md
+++ b/_posts/2024-08-09.md
@@ -14,12 +14,12 @@ Looking at the challenge we can see that we have access to a python file that we
 ## First flag
 After starting the challenge server we can see that the server gives a long hex message and ask for the encryption key of it.
 
-![alt text](/assets/lib/w1seguy/xor.png)
+![alt text](/assets/w1seguy/xor.png)
 _Server Prompt_
 
 In the python file we can see the process how this flag 1 is encoded:
 
-![alt text](/assets/lib/w1seguy/code.png)
+![alt text](/assets/w1seguy/code.png)
 _Snippet of the code_
 
 As you can look how the key is created you can see that it is randomly chosen from ascii_letters and digits with total length of 5 characters. So then our next step would be to brute force this key.
@@ -33,5 +33,5 @@ By getting a readable flag we can also get the key from dcode site. However, it'
 
 Then input the ASCII key into the terminal and receive the flag 2:
 
-![alt text](/assets/lib/w1seguy/flag2.png)
+![alt text](/assets/w1seguy/flag2.png)
 _Full interaction_
